--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,7 +45,7 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Our Studio!</div>
-                <div class="intro-heading">WE DO THE THINKING AND DESIGN YOUR IMAGINATIONS   </div>
+                <div class="intro-heading">We Do The Thinking AND Design Your Imagination</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
